fix: navbar shows fine on mobiles

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -69,6 +69,7 @@ html {
   background : #121212;
   display    : block;
   font-size  : x-large;
+  position   : fixed;
   text-align : center;
   width      : 100%;
 }
